Bug 249319 - networkmanager plasmoid icons too small when in panel (not notification tray)
Summary: networkmanager plasmoid icons too small when in panel (not notification tray)
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Plasma Widget (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-28 14:46 UTC by postdoc38
Modified: 2011-09-20 04:55 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: nm09
Sentry Crash Report:


Attachments
screenshot showing nm plasmoid icons both in notification and panel (7.67 KB, image/png)
2010-08-28 14:47 UTC, postdoc38
Details

Note You need to log in before you can comment on or make changes to this bug.
Description postdoc38 2010-08-28 14:46:34 UTC
Version:           unspecified (using KDE 4.5.0) 
OS:                Linux

When putting the nm plasmoid on the panel and not the notification tray, the icon is too small, that is, it does not occupy as much space as provided by the panel.

This is in contrast to other tray plasmoids, such as the battery applet, whose icon scales to within a few pixels of the panel width (see also attachment below).

As you can see in the attached screenshot, the icon size is actually the same whether in the notification or the panel...


Reproducible: Always

Steps to Reproduce:
install nm plasmoid to panel instead of tray


Expected Results:  
icon should be about 1.5 times bigger than it actually is.
Comment 1 postdoc38 2010-08-28 14:47:48 UTC
Created attachment 51053 [details]
screenshot showing nm plasmoid icons both in notification and panel
Comment 2 Lamarque V. Souza 2011-04-21 05:02:15 UTC
Well, the icons seem to have the same size in the screenshot you sent.
Comment 3 postdoc38 2011-04-21 07:19:55 UTC
That is exactly my point.

Say the notification tray is 30 pixels high and the panel is 40 pixels high. Say also the icon is 24 pixels high on the tray, that is, 80% of its height. Then I think, to look good, that icon should be 40*80%=32 pixels high when on the panel, not the same 24: that looks too small.

This might be a matter of taste, but at least it is the behaviour of other plasmoids...
Comment 4 Lamarque V. Souza 2011-09-20 04:55:29 UTC
Git commit 57473eea5a9cc192963877b6acc858e568413b6e by Lamarque V. Souza.
Committed on 20/09/2011 at 06:54.
Pushed by lvsouza into branch 'nm09'.

Fix networkmanager plasmoid icons too small when in panel.

BUG: 249319
FIXED-IN: nm09

M  +31   -30   applet/networkmanager.cpp
M  +2    -9    applet/networkmanager.h

http://commits.kde.org/networkmanagement/57473eea5a9cc192963877b6acc858e568413b6e