Fix networkmanager plasmoid icons too small when in panel.

BUG: 249319
FIXED-IN: nm09